<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:baselineAligned="false">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15" >

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="@string/spacer" android:visibility="invisible"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/txtViewTimer"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="0.15"
                android:gravity="center_vertical|center_horizontal"
                android:text=":05"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" >

                    <TextView
                        android:id="@+id/txtViewKey"
                        android:layout_width="100dp"
				        android:layout_height="100dp"
				        android:background="#FA8072"
				        android:gravity="center_vertical|center_horizontal"
				        android:text=""
				        android:textAppearance="?android:attr/textAppearanceLarge"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spacer" android:visibility="invisible"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" >

                    <TextView
                        android:id="@+id/txtViewChord"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="#3CB371"
                        android:gravity="center_vertical|center_horizontal"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </TableRow>
            </TableLayout>
            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.33" 
                android:src="@drawable/major5"
                android:contentDescription="@string/chart_description"/>

         </TableRow>

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacer" android:visibility="invisible"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacer" android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="100dp"
                	android:layout_height="wrap_content"
                	android:layout_weight="0.99"
                	android:gravity="center"
                	android:padding="1sp"
                    android:text="@string/buttonNext"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacer" android:visibility="invisible"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>

    </TableLayout>

</LinearLayout>
